syntax = "proto3";

package user;

option go_package = "./";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc GetUserByID (GetUserByIDRequest) returns (GetUserByIDResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
}

message CreateUserResponse {
    string id = 1;
}

message GetUserByIDRequest {
    string id = 1;
}

message GetUserByIDResponse {
    User user = 1;
}

message UpdateUserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UpdateUserResponse {}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}